Novo produto Paulo

--- a/index.html
+++ b/index.html
@@ -78,7 +78,23 @@
                         </div>
                     </div>
                 </div>
-                
+                <div class="badge">
+                    <div class="bg-white">
+                        <img src="./img/white-scarpin.png" alt="Scarpin branco">
+                        <div class="price">
+                            <h2>SCARPIN SALTO FINO BÁSICO</h2>
+                            <p>R$140,00</p>
+                        </div>
+                    </div>
+                </div><div class="badge">
+                    <div class="bg-white">
+                        <img src="./img/white-scarpin.png" alt="Scarpin branco">
+                        <div class="price">
+                            <h2>Chinelo Furado</h2>
+                            <p>Hoje é gratis</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
