--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         </div>
         <nav class="main-navbar font-navbar">
             <ul>
+                <li>INÍCIO</li>
                 <li>TODOS OS PRODUTOS</li>
                 <li>COLEÇÕES</li>
                 <li>OUTLET</li>
+                <li>CONTATO</li>
             </ul>
         </nav>
     </header>
